2001-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* rswitch.tcl: checked in Don's usenet posted implementation
	* rswitch.test: some tests for the rswitch.tcl command.

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* control.tcl:
	* control.n: Added and documented new commands [control::control]
	and [control::assert].
	* pkgIndex.tcl: Updated to reflect Tcl 8.2 dependence.
	* tclIndex: Generated

	* assert.tcl: New file: implements [control::assert].

2001-08-21  Don Porter <dgp@users.sourceforge.net>

	* index.tcl: New file: Utility script for generating tclIndex.
	* tclIndex: Generated.

        * no-op.tcl:
	* no-op.test: New files: Define and test [control::no-op].

        * control.tcl:
	* control.n:
	* pkgIndex.tcl:
	* ChangeLog: New files: Main provide script, documentation, and
	hand-crafted index script of new control package.
